--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
-
-<add key="latest" value="https://www.myget.org/f/aspnetcidev/api/v3/index.json" />  </packageSources>
+    <add key="latest" value="https://www.myget.org/f/aspnetcidev/api/v3/index.json" />
+  </packageSources>
 </configuration>
